--- a/packages/hs-home/src/pages/home/mobile.less
+++ b/packages/hs-home/src/pages/home/mobile.less
@@ -5,6 +5,30 @@
     .wave {
       display: none;
     }
+    .embla__btn {
+      display: none;
+    }
+    .embla__pagination {
+      left: 0;
+      width: 100vw;
+      bottom: 4vw;
+    }
+
+    .embla__dot {
+      width: 8vw;
+      height: 1.6vw;
+      border-radius: 4px;
+      background: #fff;
+      opacity: 0.5;
+    }
+
+    .embla__dot.is-selected {
+      width: 8vw;
+      height: 1.6vw;
+      border-radius: 4px;
+      opacity: 1;
+    }
+
     // 轮播
     .banner {
       border-top: 1px solid #e60012;
